# merge-aliases

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml  rust.yaml  tests.yaml
src/: main.rs
